<resources>
    <string name="app_name">巴枪</string>
    <string name="main_check">卸车到件</string>
    <string name="main_storge">装车发件</string>
    <string name="main_output">发件</string>
    <string name="main_query">到件</string>
    <string name="main_download">数据下载</string>
    <string name="main_import">留仓件</string>
    <string name="main_set">系统设置</string>
    <string name="action_enable">启用</string>
    <string name="action_disable">禁用</string>
    <string name="record">记录:</string>
    <string name="action_search">搜索</string>
    <string name="supplier_search_hint">供应商编号/名称/手机</string>
    <string name="tip_choice_car">请选择车辆码</string>
    <string name="set_wifi">WIFI</string>
    <string name="scan_check">盘点扫描</string>
    <string name="scan_storage">入库扫描</string>
    <string name="scan_output">出库扫描</string>
    <string name="car_code">车辆码</string>
    <string name="next_station">下一站</string>
    <string name="before_station">上一站</string>
    <string name="reason">原因</string>
    <string name="loading">正在加载…</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="express_type">快件类型</string>
    <string name="tracking_numb">运单号</string>
    <string name="set_param">参数设置</string>
    <string name="set_import">导入设置</string>
    <string name="set_export">导出设置</string>
    <string name="set_display">显示控制</string>
    <string name="set_time">时间设置</string>
    <string name="set_clear_data">清除数据</string>
    <string name="kjb_data_material_list">商品列表</string>
    <string name="has_prepare_goods">已提</string>
    <string name="count">数量</string>
    <string name="unit_price">单价</string>
    <string name="dicount">折扣</string>
    <string name="aggregate_amount">金额</string>
    <string name="tab_check">盘点</string>
    <string name="tab_storage">入库</string>
    <string name="tab_output">出库</string>
    <string name="tab_help">帮助</string>
    <string name="tab_modify">修改</string>
    <string name="tab_summarize">汇总</string>
    <string name="tab_change_number">编辑</string>
    <string name="tab_back">返回</string>
    <string name="tab_save">保存</string>
    <string name="tab_network">网络</string>
    <string name="tab_system">系统</string>
    <string name="tab_param">参数</string>
    <string name="tab_query">查询</string>
    <string name="tab_close">关闭</string>
    <string name="save">确定</string>
    <string name="scan_current_location">当前库位:</string>
    <string name="scan_input_location">输入库位</string>
    <string name="scan_cargo">库位</string>
    <string name="scan_bar">条码</string>
    <string name="scan_goods_name">品名</string>
    <string name="scan_product_code">货号</string>
    <string name="scan_bill_amout">共%1$d单</string>
    <string name="action_modify_number">编辑商品</string>
    <string name="txt_total">总数量:</string>
    <string name="txt_goods">商品</string>
    <string name="txt_warehouse">仓库</string>
    <string name="txt_open_bill">开单</string>
    <string name="txt_number">数量</string>
    <string name="txt_delete">删除</string>
    <string name="txt_export">导出</string>
    <string name="txt_upload">上传</string>
    <string name="txt_export_all">导出全部</string>
    <string name="txt_upload_all">上传全部</string>
    <string name="txt_delete_all">删除全部</string>
    <string name="txt_system_hint">系统提示</string>
    <string name="txt_server">服务器IP:</string>
    <string name="txt_port">端口:</string>
    <string name="txt_sever_hint">(对应电脑配置助手的主机IP)</string>
    <string name="txt_port_hint">(对应电脑配置助手的端口)</string>
    <string name="txt_tclj">测试连接</string>
    <string name="txt_exception">程序异常</string>
    <string name="txt_data_type">资料类型：</string>
    <string name="txt_file_path">文件路径：</string>
    <string name="txt_import_log">导入日志：</string>
    <string name="txt_import_field">导入字段:</string>
    <string name="txt_operating_wait">请稍候...</string>
    <string name="txt_copyright">广州捷宝科技股份有限公司</string>
    <string name="title_system_admin_check">系统管理员验证</string>
    <string name="title_select_mode">请选择模式</string>
    <string name="txt_passward">密码</string>
    <string name="txt_blank">空格</string>
    <string name="txt_usb_import">USB导入导出</string>
    <string name="txt_lead_in">导入</string>
    <string name="txt_find_new_version">发现新版本</string>
    <string name="txt_update_hint">更新内容:</string>
    <string name="txt_bill_number">单号</string>
    <string name="txt_create_time">创建日期</string>
    <string name="txt_language">语言设置:</string>
    <string name="txt_device_id">设备号:</string>
    <string name="hint_start_update">正在更新</string>
    <string name="hint_input_bill">请输入单号</string>
    <string name="hint_query_barcode">此处按条件查询</string>
    <string name="hint_export">确定要导出数据吗？</string>
    <string name="hint_upload">确定要上传数据吗？</string>
    <string name="hint_export_all">确定要导出所有的数据吗？</string>
    <string name="hint_upload_all">确定要上传所有的数据吗？</string>
    <string name="hint_delete">确定要删除所有单据记录吗？\n 请注意删除将是永久删除，不可恢复</string>
    <string name="msg_delete_bill">确定要将选择的单据删除吗?\n  请注意删除将是永久删除，不可恢复</string>
    <string name="msg_delete_entry">确定要将选择的记录删除吗?\n  请注意删除将是永久删除，不可恢复</string>
    <string name="hint_delete_goods_location">是否删除此货位上所有数据</string>
    <string name="hint_whether_quiz">是否退出盘点宝</string>
    <string name="hint_usb_import">导入数据文件为文本文件(txt)默认存为SD存储卡下的stockbao下的导入文件目录下</string>
    <string name="hint_admin_input_passward">请输入密码</string>
    <string name="btn_add">增加</string>
    <string name="btn_reduce_rows">减少</string>
    <string name="btn_ok">确认</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_reset">重置</string>
    <string name="btn_import_goods">导入商品</string>
    <string name="btn_import_warehouse">导入仓库</string>
    <string name="btn_check_goods">检查商品</string>
    <string name="btn_check_warehouse">检查仓库</string>
    <string name="txt_download_warehouse">下载仓库</string>
    <string name="txt_download_goods">下载商品</string>
    <string name="txt_update_parameter">更新参数</string>
    <string name="btn_start_import">开始导入</string>
    <string name="btn_select_file">选择文件</string>
    <string name="summarize_mode">汇总方式</string>
    <string name="summarize_query">汇总查看</string>
    <string name="summarize__summarize">入库汇总</string>
    <string name="summarize_output">出库汇总</string>
    <string name="summarize_location_amount">库位数量:</string>
    <string name="summarize_total">全部</string>
    <string name="summarize_select_mode">请选择汇总方式</string>
    <string name="summarize_select_location">请选择库位</string>
    <string name="summize_group_goods">按条码</string>
    <string name="summize_group_location">按库位</string>
    <string name="set_import_separator">导入文件分隔符</string>
    <string name="set_import_format">导入文件格式</string>
    <string name="set_export_separator">导出文件分隔符</string>
    <string name="set_export_format">导出文件格式</string>
    <string name="set_separator">分隔符</string>
    <string name="set_format">格式</string>
    <string name="set_check_barcode">扫描条码时,验证条码</string>
    <string name="set_merge_same_barcode">扫描相同条码合并</string>
    <string name="set_export_delete_bill">上传或导出删除单据</string>
    <string name="set_start_exit_check">启动退出系统验证</string>
    <string name="set_sacn_edit_num">扫描时编辑数量</string>
    <string name="set_enable_wh_manage">启用仓库管理</string>
    <string name="set_start_unique_code">启用唯一码</string>
    <string name="set_scan_mode">扫描模式</string>
    <string name="set_delete_need_passward">删单需要密码</string>
    <string name="set_screen_keep_bright">屏幕常亮</string>
    <string name="set_param_config">参数配置</string>
    <string name="set_export_file">导出文件</string>
    <string name="set_list_rows">列表行数</string>
    <string name="set_barcode_truncate">条码截取</string>
    <string name="set_authorize_customer">授权客户:</string>
    <string name="set_full_version">完整版本:</string>
    <string name="set_release_date">发布日期:</string>
    <string name="set_version_mode">版本模式:</string>
    <string name="set_display_column">设置需要显示的列</string>
    <string name="set_truncate_mode">截取方式</string>
    <string name="set_starting_run">开机启动</string>
    <string name="set_scan_mode_default">默认</string>
    <string name="set_scan_mode_sound_shake">声音+震动</string>
    <string name="set_scan_mode_shake">震动</string>
    <string name="msg_select_warehouse">请选择仓库</string>
    <string name="msg_export_success">导出成功</string>
    <string name="msg_upload_success">上传成功</string>
    <string name="msg_export_fail">导出失败</string>
    <string name="msg_upload_fail">上传失败</string>
    <string name="msg_delete_success">删除成功</string>
    <string name="msg_delete_fail">删除失败</string>
    <string name="msg_number_not_correct">输入数量不正确</string>
    <string name="msg_no_export_data">没有要导出的数据</string>
    <string name="msg_no_upload_data">没有要上传的数据</string>
    <string name="msg_no_delete_data">没有要删除的数据</string>
    <string name="msg_please_set_export">请设置导出字段</string>
    <string name="msg_please_set_display">请设置显示字段</string>
    <string name="msg_select_column">请选择字段</string>
    <string name="msg_load_data_fail">加载数据失败</string>
    <string name="msg_passward_no_correct">密码不正确</string>
    <string name="msg_no_goods_please_scan">没有任何商品，请先扫描</string>
    <string name="msg_clear_success">清除成功</string>
    <string name="msg_clear_fail">清除失败</string>
    <string name="msg_save_success">保存成功</string>
    <string name="msg_save_fail">保存失败</string>
    <string name="msg_test_connect_success">测试连接成功</string>
    <string name="msg_test_connect_fail">测试连接失败，请确认PC助手服务已开启</string>
    <string name="msg_no_goods_find">找不到此商品的相关信息！</string>
    <string name="msg_used_unique_code">当前系统已启用唯一码控制，条码%1$s已扫描！</string>
    <string name="msg_unique_code_no_modify">当前系统已启用唯一码控制，不允许修改数量！</string>
    <string name="msg_please_first_delete_bill">系统只能缓存%1$d张单据,请及时删除单据！\n您也可以设置参数上传或导出单后删除单据！</string>
    <string name="msg_warehouse_null_warning">仓库为空，请导入仓库！</string>
    <string name="msg_please_add_location">库位为空，请添加库位！</string>
    <string name="msg_number_no_valid">输入数量不合法</string>
    <string name="msg_please_input_number">请输入数量</string>
    <string name="msg_query_data_fail">查询数据失败</string>
    <string name="msg_no_delete_location">没有可删除的库位</string>
    <string name="msg_bill_repeat_hint">该单号已存在，是否打开</string>
    <string name="msg_no_query_data">没有查到该信息</string>
    <string name="msg_sd_no_use">存储卡不可用,请检查!</string>
    <string name="msg_device_id_error">设备ID为空，请重新进入!</string>
    <string name="msg_update_paramter_fail">更新参数失败</string>
    <string name="msg_update_paramter_success">更新参数成功</string>
    <string name="msg_no_select_file">请先选择文件</string>
    <string name="msg_import_fail">导入失败</string>
    <string name="msg_import_success">导入成功</string>
    <string name="msg_please_add_loc">请添加库位</string>
    <string name="msg_please_select_warehouse">请选择仓库</string>
    <string name="msg_please_add_warehouse">请导入仓库</string>
    <string name="msg_net_error_check">网络连接失败，请检查您的网络</string>
    <string name="msg_format_not_correct">选择格式不正确</string>
    <string name="msg_version_no_match">版本不匹配</string>
    <string name="msg_download_no_content">没有下载内容</string>
    <string name="msg_delete_old_data">开始删除原有的%1$s数据</string>
    <string name="msg_download_success">下载成功</string>
    <string name="msg_network_require_fail">网络请求失败，请确认PC助手服务已开启</string>
    <string name="msg_download_fail">下载失败</string>
    <string name="msg_param_Ip_Invalidate">IP地址格式不正确，请输入正确的IP</string>
    <string name="msg_param_Port_Invalidate">端口不正确，请输入正确的端口</string>
    <string name="msg_add_fail">添加失败</string>
    <string name="import_start_check_file">开始检查文件</string>
    <string name="import_file_size_error">文件的大小是0B</string>
    <string name="import_file_charset_error">文件编码是%1$s，设置编码是%2$s</string>
    <string name="import_file_row_null">第%1$d行是空</string>
    <string name="import_file_seperator_no">第%1$d行没有找到分隔符%2$s</string>
    <string name="import_file_columns_error">第%1$d行的列数是%2$d列，设置列数是%3$d列</string>
    <string name="import_file_content_error">第%1$d行第%2$d列是%3$s,应该是%4$s</string>
    <string name="enable_login">启用登录</string>
</resources>