<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="45dip"
        android:background="@drawable/dialog_title_bg"
        android:paddingLeft="5dip"
        android:paddingRight="5dip">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/back_selector" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txt_lead_in"
            android:textColor="@color/white"
            android:textSize="18.0dip" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:background="@drawable/custom_btn_selector"
            android:text="@string/btn_select_file" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_content_bg"
        android:orientation="vertical"
        android:paddingLeft="5dip">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_data_type" />

            <TextView
                android:id="@+id/data_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dip"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_file_path"
                android:textSize="10sp"/>

            <TextView
                android:id="@+id/file_path"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dip"
            android:gravity="center">

        <Button
            android:id="@+id/start_import"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/positive_bg_selector"
            android:gravity="center"
            android:text="@string/btn_start_import"
            android:textColor="@color/white"
            android:textSize="18.0dip" />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dip"
            android:text="@string/txt_import_log"/>
        <ListView
            android:id="@+id/mListview"
            android:layout_width="match_parent"
            android:layout_height="100dip"
            android:layout_weight="1" />


    </LinearLayout>
</LinearLayout>