<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/check_barcode"
                android:layout_width="wrap_content"
                android:layout_height="42dip"
                android:text="@string/set_check_barcode"
                android:textColor="@color/white"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="42dip"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/merge_same_barcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_merge_same_barcode"
                    android:textColor="@color/white"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="42dip"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/start_unique_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_start_unique_code"
                    android:textColor="@color/white"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="42dip"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/export_delete_bill"
                    android:layout_width="wrap_content"
                    android:layout_height="40dip"
                    android:text="@string/set_export_delete_bill"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="42dip"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/enable_wh_manage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_enable_wh_manage"
                    android:textColor="@color/white"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="42dip"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/start_exit_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_start_exit_check"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="42dip"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/delete_need_passward"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_delete_need_passward"
                    android:textColor="@color/white"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="42dip"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/sacn_edit_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_sacn_edit_num"
                    android:textColor="@color/white"
                    android:textSize="13sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="42dip"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/screen_bright"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_screen_keep_bright"
                    android:textColor="@color/white"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="42dip"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/starting_run"
                    android:layout_width="wrap_content"
                    android:layout_height="42dip"
                    android:text="@string/set_starting_run"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:checked="false" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="42dip"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/enable_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enable_login"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/scan_mode_txt"
                    android:layout_width="115dip"
                    android:layout_height="wrap_content"
                    android:text="@string/set_scan_mode"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/scan_mode"
                    android:layout_width="match_parent"
                    android:layout_height="28dip"
                    android:layout_marginLeft="1dip"
                    android:background="@drawable/stroke_button_frame"
                    android:drawableRight="@drawable/arrow_down"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dip"
                    android:text="蜂鸣加震动"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/list_rows_txt"
                    android:layout_width="115dip"
                    android:layout_height="wrap_content"
                    android:text="@string/set_list_rows"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/list_rows_et"
                    android:layout_width="50dip"
                    android:layout_height="28dip"
                    android:layout_marginLeft="1dip"
                    android:background="@drawable/stroke_button_frame"
                    android:drawableRight="@drawable/arrow_down"
                    android:gravity="center_vertical"
                    android:inputType="number"
                    android:paddingLeft="2dip"
                    android:paddingRight="2dip"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/add_rows_btn"
                    android:layout_width="73dip"
                    android:layout_height="28dip"
                    android:layout_marginLeft="1dip"
                    android:background="@drawable/custom_btn_normal"
                    android:text="@string/btn_add" />

                <Button
                    android:id="@+id/reduce_rows_btn"
                    android:layout_width="75dip"
                    android:layout_height="28dip"
                    android:layout_marginLeft="1dip"
                    android:background="@drawable/custom_btn_normal"
                    android:text="@string/btn_reduce_rows" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/barcode_truncate_txt"
                    android:layout_width="115dip"
                    android:layout_height="wrap_content"
                    android:text="@string/set_barcode_truncate"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/barcode_truncate"
                    android:layout_width="100dip"
                    android:layout_height="28dip"
                    android:layout_marginLeft="1dip"
                    android:background="@drawable/stroke_button_frame"
                    android:drawableRight="@drawable/arrow_down"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dip"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/truncate_bit_et"
                    android:layout_width="100dip"
                    android:layout_height="25dip"
                    android:layout_marginLeft="5dip"
                    android:background="@drawable/stroke_button_frame"
                    android:ems="1"
                    android:gravity="center_vertical"
                    android:inputType="number"
                    android:maxLength="3"
                    android:paddingLeft="5dip"
                    android:textSize="13sp"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/exportFile_txt"
                    android:layout_width="115dip"
                    android:layout_height="wrap_content"
                    android:text="@string/set_export_file"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/exportFile"
                    android:layout_width="100dip"
                    android:layout_height="28dip"
                    android:layout_marginLeft="1dip"
                    android:background="@drawable/stroke_button_frame"
                    android:drawableRight="@drawable/arrow_down"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dip"
                    android:textSize="13sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>