<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/connect_mode_txt"
            android:layout_width="70dip"
            android:layout_height="wrap_content"
            android:text="@string/set_version_mode"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/connect_mode"
            android:layout_width="0dip"
            android:layout_height="25dip"
            android:layout_marginLeft="10dip"
            android:layout_weight="1"
            android:background="@drawable/stroke_button_frame"
            android:drawableRight="@drawable/arrow_down"
            android:gravity="center_vertical"
            android:paddingRight="5dip"
            android:paddingLeft="3dip"/>"
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sever_ip_txt"
            android:layout_width="70dip"
            android:layout_height="wrap_content"
            android:text="@string/txt_server"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/sever_ip"
            android:layout_width="0dip"
            android:layout_height="25dip"
            android:layout_marginLeft="10dip"
            android:layout_weight="1"
            android:background="@drawable/stroke_button_frame"
            android:gravity="center_vertical"
            android:inputType="numberDecimal"
            android:maxEms="20"
            android:digits="0123456789."
            android:paddingLeft="3dip"
            android:paddingRight="5dip"
            android:singleLine="true"
            android:selectAllOnFocus="true"
            android:textColor="@color/color_611D64"

            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/txt_sever_hint"
        android:textColor="@color/color_85CB62"
        android:textSize="12sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/port_txt"
            android:layout_width="70dip"
            android:layout_height="wrap_content"
            android:minWidth="70dip"
            android:text="@string/txt_port"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/port"
            android:layout_width="0dip"
            android:layout_height="25dip"
            android:layout_marginLeft="10dip"
            android:layout_weight="1"
            android:background="@drawable/stroke_button_frame"
            android:focusable="true"
            android:gravity="center_vertical"
            android:inputType="numberDecimal"
            android:maxLength="8"
            android:maxEms="8"
            android:paddingLeft="3dip"
            android:paddingRight="5dip"
            android:singleLine="true"
            android:textColor="@color/color_611D64"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/txt_port_hint"
        android:textColor="@color/color_85CB62"
        android:textSize="12sp"/>


    <Button
        android:id="@+id/test_connect"
        android:layout_width="125dip"
        android:layout_height="wrap_content"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dip"
        android:background="@drawable/custom_btn_selector"
        android:text="@string/txt_tclj"
        android:textColor="@color/color_611D64" />


</LinearLayout>
