<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_hint"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:padding="@dimen/margin_min"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_enable"
            style="@style/list_item_sub_style"
            android:drawableLeft="@drawable/icon_status_eable_small"
            android:drawableStart="@drawable/icon_status_eable_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_enable"/>
        <TextView
            android:layout_toRightOf="@id/tv_enable"
            android:layout_toEndOf="@id/tv_enable"
            android:layout_marginLeft="@dimen/margin_min"
            android:layout_marginStart="@dimen/margin_min"
            android:drawableLeft="@drawable/icon_status_disable_small"
            android:drawableStart="@drawable/icon_status_disable_small"
            style="@style/list_item_sub_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_disable"/>
        <TextView
            style="@style/list_item_sub_style"
            android:id="@+id/record_count"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/delive_min_height"
        android:background="@drawable/divider"/>
</LinearLayout>